--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,7 +40,7 @@ jobs:
       # Step 6: Deploy to S3
       - name: Deploy to S3
         run: |
-          aws s3 sync dist/ s3://vcp-learn-dev --delete
+          aws s3 sync dist/ s3://dbnc-react --delete
         env:
           S3_BUCKET: ${{ secrets.S3_BUCKET }}
 
